<resources>
    <string name="app_name">Quiz App</string>
    <string name="q1">Q1:Walt Disney was</string>
    <string name="q2">Q2:To which country does the present UN Secretary-General belongs?</string>
    <string name="q3">Q3:Thomas Cup is associated with</string>
    <string name="q4">Q4:The unit of current is</string>
    <string name="q5">Q5:Vitamin B12 is most useful for combating</string>
    <string name="q6">Q6:To prevent loss of weight plants reduce transpiration by</string>
    <string name="q7">Q7:The telescope is used for viewing</string>
    <string name="q8">Q8:Which two of the following numbers have a product that is between –1 and 0?
Indicate both of the numbers.</string>
</resources>
